@@ -3,6 +3,8 @@
 	* tests/test-pokeravatar.py.in
 	(PokerAvatarTestCase.variousStartPackets): Wrote function.
 	(PokerAvatarTestCase.test47_startPackets): Wrote function.
+	(PokerAvatarTestCase.badSeatTable): Wrote function.
+	(PokerAvatarTestCase.test48_seatPackets): Wrote function.
 
 2008-03-01  Loic Dachary <loic@dachary.org>
 
